# lex-graph

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: .tests.yml
configs/: graph_config.yaml  preprocess_config.yaml
demo/: README.md  app.py
demo/.streamlit/: config.toml
notebooks/: analysis_example.ipynb
scripts/: README.md  build_graph.py  preprocess.py
src/lex_graph/: exceptions.py  graph.py  types.py
src/lex_graph/parsers/: eu.py  parser.py  uk.py  xml.py
src/lex_graph/reference_finders/: base.py  llm.py  local_llm.py  pattern.py
tests/: test_app.py  test_eu.py  test_graph.py  test_parser.py  test_process.py  test_references.py  test_uk.py  test_uk_old.py  test_xml.py
tests/test_data/processed/raw/: housing_act_sample.json
tests/test_data/raw/: aep-Edw2-7-0-revised-data.xml  eudn-2007-257-revised-data.xml  eur-2016-2243-revised-data.xml  housing_act_sample.xml  ukpga-2004-34-revised-data.xml  ukpga-Geo3-49-126-revised-data.xml
